src/styles/general.scss
// general
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    text-align: center;
}

img {
    max-width: 100%;
    max-height: 100%;
}

a {
    color: #303030;
}

// layout
.container {
    max-width: 1170px;
    margin: 0 auto;
}

